<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etTransactionTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"
        android:hint="@string/transactionHint"/>

    <RadioGroup
        android:id="@+id/rgTipAmounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTransactionTotal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <RadioButton
            android:id="@+id/rbp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10" />

        <RadioButton
            android:id="@+id/rbp15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p15" />

        <RadioButton
            android:id="@+id/rbp20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p20" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvTipTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/rgTipAmounts"
        android:text="@string/tipTotal" />

    <TextView
        android:id="@+id/tvTipTotalOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/zeroDollars"
        android:layout_alignTop="@+id/tvTipTotal"
        android:layout_alignRight="@+id/etTransactionTotal"
        android:layout_alignEnd="@+id/etTransactionTotal" />




    <!--android:layout_alignParentBottom="true"
    android:layout_marginRight="152dp"
    android:layout_alignRight="@+id/etTransactionTotal"
    android:layout_alignEnd="@+id/etTransactionTotal"-->


</RelativeLayout>